--- a/views/mail.html
+++ b/views/mail.html
@@ -5,5 +5,5 @@
       body { font-family: "Helvetica Neue",Helvetica,Arial,sans-serif"; }
     </style>
   </head>
-  <body>{{{yield}}}</body>
+  <body>{{>content}}</body>
 </html>
