--- a/views/welcome.html
+++ b/views/welcome.html
@@ -1,3 +1,7 @@
 <h1>Welcome to Karma Farma</h1>
 
-<p>Thanks for signing up!  Make sure to get your orders in every Tuesday and Sunday.</p>
+<p>Thanks for signing up! First delivery will be on November 4th.  Please place your order by midnight on November 2nd.  Let me know if you have any other questions or comments.</p>
+
+<p>Sincerely,</p>
+
+<p>Chelsea Greenwood</p>
