--- a/public/css/index.less
+++ b/public/css/index.less
@@ -47,13 +47,10 @@ a {
 .menu-item { border: 1px solid #ccc; margin: 10px; }
 
 .img {
-  background-position: 50% 50%;
   background-repeat: no-repeat;
-  border-radius: 50%;
-  -webkit-border-radius: 50%;
-  -moz-border-radius: 50%;
-  width: 50px;
-  height: 50px;
+  background-size: 100px 100px;
+  width: 100px;
+  height: 100px;
   margin-right: 15px;
 }
 
