--- a/views/about.html
+++ b/views/about.html
@@ -9,9 +9,9 @@
       </p>
 
     <p>
-    The program is designed to provide you with lunch and dinner for 6 days of the week.  You'll get to choose 4 entrees and 2 soup and salad combos twice a week.  There is a protein component of egg, meat, or fish included in every meal.  You can specify which entrees, salads and soups you want, or receive one of each by default.</p>
+    The program is designed to provide you with lunch and dinner for 6 days of the week.  You'll get to choose 4 entrées and 2 soup and salad combos twice a week.  There is a protein component of egg, meat, or fish included in every meal.  You can specify which entrées, salads and soups you want, or receive one of each by default.</p>
 
-    <h2>What's the Cost?</h2>
+    <h2>What it Costs</h2>
     <table class="table">
       <tr>
         <th><span class="fa fa-lg fa-dollar"> Pay with Cash</span></th>
@@ -33,7 +33,7 @@
 <h2>Delivery</h2>
 
 <p>
-Deliveries will be made on Tuesday and Friday mornings between 9am and 12pm.  We will try to make most of our deliveries by bicycle.  At this time, we can only deliver to Richmond and Vancouver.  If you would like to pick-up your meals in Richmond, this can be arranged as well.  It is your responsibility to refrigerate your meals upon delivery or leave a cooler with ice packs in it at the delivery spot you indicate.  All food will be delivered in reusable containers.  Please return the containers to us at each delivery so they can be re-used. 
+Deliveries will be made on Tuesday and Friday mornings between 9am and 12pm.  We will try to make most of our deliveries by bicycle.  At this time, we can only deliver to Richmond and Vancouver.  If you would like to pick-up your meals in Richmond, this can be arranged as well.  It is your responsibility to refrigerate your meals upon delivery or leave a cooler with ice packs in it at the delivery spot you indicate.  All food is designed to stay fresh in the refrigerator for at least 3 days.  Soups and entrées with a prominent sauce component will freeze well if you do not eat them within this time.  All food will be delivered in reusable containers.  Please return the containers to us at each delivery so they can be re-used. 
 </p>
 
 
@@ -41,6 +41,11 @@ Deliveries will be made on Tuesday and Friday mornings between 9am and 12pm.  We
 
 <p>
 A paleo diet excludes all grains, legumes, dairy, sugar, high omega-6 vegetable oils and other processed foods.  Plenty of vegetables, fruit, meat, fish, seeds and nuts are eaten instead. This diet would be suitable for many elimination diets and my hope is that people will use this opportunity to help them explore their own food intolerances or simply to incorporate more nutrient­dense foods in their diet and see how it makes them feel as a result. These meals will be lower in carbohydrates and higher in saturated fat than what many people are used to eating, but I believe this is actually a much healthier way to eat.</p>
+
+<p>For more info, check out this video by a respected health care practitioner in the paleo community encouraging people to try the paleo diet:</p>
+<script height="456px" width="100%" src="http://player.ooyala.com/iframe.js#pbid=35ad9a0b3b6943de990b03e6b239b4e2&ec=11MDQxbzr6WQImVwZWUzgcEpJ_ahafk9"></script>
+
+<h2>Other Questions and Aswers</h2>
 
 <h3>Isn't it unhealthy to eat saturated fat?</h3>
 
@@ -77,7 +82,4 @@ Ghee and expeller­pressed coconut oil are the main cooking oils I use. Ghee is 
 <p>Low FODMAP diets are gaining more attention for helping people with irritable bowel symptoms (i.e. bloating, gas, diarrhea, constipation). So, if I have labeled a meal “Low FODMAP” it does not contain any of the foods higher in FODMAPs, or fermentable oligosaccharides, disaccharides, monosaccharides and polyols. These are bascially the sugars in wheat, rye, barley, milk, legumes and certain fruits and vegetables.</p>
 
 <p>The Autoimmune Paleo Protocol is a stricter version of the paleo diet, in which nightshade fruits and vegetables, eggs, nuts, and seeds are also avoided. This diet is often followed by people who have an autoimmune disease, such as rheumatoid arthritis or multiple sclerosis, and want to see if this stricter diet will improve their symptoms.  I am not cooking for enough people at this time to provide enough options to cater to each of these more restricted versions of the paleo diet, but I wanted to give people an idea of what else is out there that may be of benefit to them in the future.  </p>
-
-<p>For more info, check out this video by a respected health care practitioner in the paleo community encouraging people to try the paleo diet:</p>
-<script height="456px" width="100%" src="http://player.ooyala.com/iframe.js#pbid=35ad9a0b3b6943de990b03e6b239b4e2&ec=11MDQxbzr6WQImVwZWUzgcEpJ_ahafk9"></script>
 
