--- a/views/about.html
+++ b/views/about.html
@@ -45,7 +45,7 @@ A paleo diet excludes all grains, legumes, dairy, sugar, high omega-6 vegetable 
 <p>For more info, check out this video by a respected health care practitioner in the paleo community encouraging people to try the paleo diet:</p>
 <script height="456px" width="100%" src="http://player.ooyala.com/iframe.js#pbid=35ad9a0b3b6943de990b03e6b239b4e2&ec=11MDQxbzr6WQImVwZWUzgcEpJ_ahafk9"></script>
 
-<h2>Other Questions and Aswers</h2>
+<h2>Other Questions and Answers</h2>
 
 <h3>Isn't it unhealthy to eat saturated fat?</h3>
 
