--- a/views/about.html
+++ b/views/about.html
@@ -33,14 +33,14 @@
 <h2>Delivery</h2>
 
 <p>
-Deliveries will be made on Tuesday and Friday mornings between 9am and 12pm.  We will try to make most of our deliveries by bicycle.  At this time, we can only deliver to Richmond and Vancouver.  If you would like to pick-up your meals in Richmond, this can be arranged as well.  It is your responsibility to refrigerate your meals upon delivery or leave a cooler with ice packs in it at the delivery spot you indicate.  All food is designed to stay fresh in the refrigerator for at least 3 days.  Soups and entrées with a prominent sauce component will freeze well if you do not eat them within this time.  All food will be delivered in reusable containers.  Please return the containers to us at each delivery so they can be re-used. 
+Deliveries will be made on Tuesday and Friday mornings between 9am and 12pm.  We will try to make most of our deliveries by bicycle.  At this time, we can only deliver to Richmond and Vancouver.  If you would like to pick-up your meals in Richmond, this can be arranged as well.  It is your responsibility to refrigerate your meals upon delivery or leave a cooler with ice packs in it at the delivery spot you indicate.  All food is designed to stay fresh in the refrigerator for at least 3 days.  When you are ready to eat your meals, heat up on low heat in the oven, microwave or on the stovetop.  Soups and entrées with a prominent sauce component will freeze well if you do not eat them within 3 days.  All food will be delivered in reusable containers.  Please return the containers to us at each delivery so they can be re-used. 
 </p>
 
 
 <h2>The Paleo Diet</h2>
 
 <p>
-A paleo diet excludes all grains, legumes, dairy, sugar, high omega-6 vegetable oils and other processed foods.  Plenty of vegetables, fruit, meat, fish, seeds and nuts are eaten instead. This diet would be suitable for many elimination diets and my hope is that people will use this opportunity to help them explore their own food intolerances or simply to incorporate more nutrient­dense foods in their diet and see how it makes them feel as a result. These meals will be lower in carbohydrates and higher in saturated fat than what many people are used to eating, but I believe this is actually a much healthier way to eat.</p>
+A paleo diet excludes all grains, dairy, legumes, refined sweeteners, high omega-6 vegetable oils and other processed foods.  Plenty of vegetables, fruit, meat, fish, seeds and nuts are eaten instead. This diet would be suitable for many elimination diets and my hope is that people will use this opportunity to help them explore their own food intolerances or simply to incorporate more nutrient­dense foods in their diet and see how it makes them feel. These meals will be lower in carbohydrates and higher in saturated fat than what many people are used to eating, but I believe this is actually a much healthier way to eat.</p>
 
 <p>For more info, check out this video by a respected health care practitioner in the paleo community encouraging people to try the paleo diet:</p>
 <script height="456px" width="100%" src="http://player.ooyala.com/iframe.js#pbid=35ad9a0b3b6943de990b03e6b239b4e2&ec=11MDQxbzr6WQImVwZWUzgcEpJ_ahafk9"></script>
@@ -50,34 +50,38 @@ A paleo diet excludes all grains, legumes, dairy, sugar, high omega-6 vegetable 
 <h3>Isn't it unhealthy to eat saturated fat?</h3>
 
 <p>
-It's true that since the 1950s there has been a wide­spread public health campaign persuading people to eat less saturated fat to avoid heart disease. In fact, Canada's Food Guide still supports this message, but this recommendation was based on poorly done studies from many decades ago. Better designed studies have since been done and these do not support the hypothesis that saturated fat causes heart disease.
+It's true that since the 1950s there has been a widespread public health campaign persuading people to eat less saturated fat to avoid heart disease. In fact, Canada's Food Guide still supports this message, but this recommendation was based on poorly done studies from many decades ago. Better designed studies have since been done and these do not support the hypothesis that saturated fat causes heart disease or strokes.
 </p>
 
 <p>
-However, many people's doctors still tell them that they have to eat less saturated fat to lower their cholesterol to avoid heart disease and stroke. This is even what I told my patients less than a year ago when I was still practicing family medicine. I have since found out that the connection between cholesterol levels and heart disease is seriously being questioned by the scientific community.
+However, many people's doctors still tell them that they have to eat less saturated fat to lower their cholesterol to avoid cardiovascular disease. This is even what I told my patients less than a year ago when I was still practicing family medicine. I have since found out that the connection between cholesterol levels and heart disease is seriously being questioned by the scientific community.
 </p>
 
 <p>
-Even if there is a solid connection, saturated fat intake does not affect most people's cholesterol levels anyways. For those people that it does effect, higher saturated fat intake tends to raise both the “bad,” or LDL, cholesterol and the good, or “HDL,” cholesterol. Further complicating this matter, people who eat less saturated fat tend to replace these calories with carbohydrates and vegetable oils that are high in omega­6 fatty acids. There is a lot of research indicating that these vegetable oils may contribute to a number of health problems including heart disease. Carbohydrates cause their own issues with the blood cholesterol panel, tending to raise triglycerides and make LDL­cholesterol particles smaller, both of which are markers for heart disease risk. So, if your doctor is telling you to eat less saturated fat to lower your cholesterol or to take a statin, I would instead recommend that you try the paleo diet for 3­6 months and then re- test your cholesterol panel to see where you're at. Or perhaps you could just stop worrying about your cholesterol altogether and focus on things that you know are going to improve your health, like eating less processed foods, eating more nutrient­dense whole foods, being more active, getting more sleep and reducing the stress in your life.  
+Even if there is a solid connection, saturated fat intake does not affect most people's cholesterol levels anyways. For those people that it does effect, higher saturated fat intake tends to raise both the “bad” cholesterol (LDL cholesterol) and the good cholesterol (HDL cholesterol). Further complicating things, people who eat less saturated fat tend to replace these calories with carbohydrates and vegetable oils that are high in omega-6 fatty acids. There is a lot of research indicating that these vegetable oils may contribute to a number of health problems including heart disease. Carbohydrates cause their own issues with the blood cholesterol panel, tending to raise triglycerides and make LDL cholesterol particles smaller, both of which are markers for heart disease risk. So, if your doctor is telling you to eat less saturated fat to lower your cholesterol or to take a statin drug, I would instead recommend that you try the paleo diet for 3-6 months and then re-test your cholesterol panel to see where you're at. Or perhaps you could just stop worrying about your cholesterol altogether and focus on things that you know are going to improve your health, like eating less processed foods, eating more nutrient-dense whole foods, being more active, getting more sleep and reducing the stress in your life.  
 </p>
 
 <h3>What cooking oils do you use?</h3>  
 <p>
-Ghee and expeller­pressed coconut oil are the main cooking oils I use. Ghee is clarified butter, which has had the proteins cooked off, so it will not be an issue for people with sensitivities to milk proteins. Both ghee and butter are lactose­free. Expeller­pressed coconut oil is steam deorderized, which removes the coconut taste making it suited to use in most recipes.  
+Ghee and expeller-pressed coconut oil are the main cooking oils I use. Ghee is clarified butter, which has had nearly all the milk proteins cooked off, so it is unlikely to be an issue for people with sensitivities to milk proteins. Both ghee and butter contain only trace amounts of lactose, making them generally well-tolerated by those who are lactose intollerant. Expeller-pressed coconut oil is steam deorderized, which removes the coconut taste making it suited to use in most recipes.  
 </p>
 
 <h3>What about the oils in your salad dressings?</h3>
 
-<p>Extra­virgin olive oil is the main oil I use for salad dressings. In addition, I use sesame oil to flavour Asian salad dressings. If mayonaise is used it's always homemade using avocado oil. I do not use high omega­6 vegetable oils, such as canola oil, sunflower/saflower oil, soybean oil or corn oil.  Do you make your own soup stock?  Yes, I do. I make my chicken and beef stocks by slow booking bones. This is known as a bone broth. Bone broth is rich in the amino acid glycine, which is often lacking from our diets that tend to be high in muscle meat, and hence the amino acid methionine.  
+<p>Extra­virgin olive oil is the main oil I use for salad dressings. In addition, I use sesame oil to flavour Asian salad dressings. If mayonaise is used it's always homemade using avocado oil. I do not use high omega-6 vegetable oils, such as canola oil, sunflower/saflower oil, soybean oil or corn oil.  
+
+<h3>Do you make your own soup stock?</h3>
+<p>
+Yes, I do. I make my chicken and beef stocks by slow booking bones. This is known as a bone broth. Bone broth is rich in the amino acid glycine, which is often lacking from our diets that tend to be high in muscle meat.
 </p>
 
 <h3>What sweeteners do you use?</h3>
 
-<p>Sometimes I use fruit and juice fresh­squeezed from fruit to sweeten my meals a touch. I do not use any other sweeteners, such as sugar, honey, maple syrup or artificial sweeteners in any of my recipes.  </p>
+<p>Sometimes I use fruit and juice fresh-squeezed from fruit to sweeten my meals a touch. I do not use any other sweeteners, such as sugar, honey, maple syrup or artificial sweeteners in any of my recipes.  </p>
 
 <h3>Why do you label some of your meals “Low Carb”, “Low FODMAP” and “Autoimmune Protocol Approved”?</h3>
 
-<p>Low carb diets can help people lose weight, lower their insulin levels and lower their blood sugars, which is good for diabetics or people at risk of becoming diabetic. A low carb diet is often defined as getting 10­15% of your calories from carbohydrates. So, if I have labeled a meal “Low Carb” it contains under 20 grams of carbohydrates. This should keep most peole within their daily low carb diet limit. If you are of the male sex, taller, more muscular, or quite active, you will likely require more carbs than this, even on a low carb diet.</p>
+<p>Low carb diets can help people lose weight, lower their insulin levels and lower their blood sugars, which is good for most people, including diabetics or people at risk of becoming diabetic. A low carb diet is often defined as getting 10­15% of your calories from carbohydrates. So, if I have labeled a meal “Low Carb” it contains under 20 grams of carbohydrates. This should keep most peole within their daily low carb diet limit. If you are of the male sex, taller, more muscular, or quite active, you may require more carbs than this, even on a low carb diet.</p>
 
 <p>Low FODMAP diets are gaining more attention for helping people with irritable bowel symptoms (i.e. bloating, gas, diarrhea, constipation). So, if I have labeled a meal “Low FODMAP” it does not contain any of the foods higher in FODMAPs, or fermentable oligosaccharides, disaccharides, monosaccharides and polyols. These are bascially the sugars in wheat, rye, barley, milk, legumes and certain fruits and vegetables.</p>
 
