--- a/views/about.html
+++ b/views/about.html
@@ -47,20 +47,6 @@ A paleo diet excludes all grains, dairy, legumes, refined sweeteners, high omega
 
 <h2>Other Questions and Answers</h2>
 
-<h3>Isn't it unhealthy to eat saturated fat?</h3>
-
-<p>
-It's true that since the 1950s there has been a widespread public health campaign persuading people to eat less saturated fat to avoid heart disease. In fact, Canada's Food Guide still supports this message, but this recommendation was based on poorly done studies from many decades ago. Better designed studies have since been done and these do not support the hypothesis that saturated fat causes heart disease or strokes.
-</p>
-
-<p>
-However, many people's doctors still tell them that they have to eat less saturated fat to lower their cholesterol to avoid cardiovascular disease. This is even what I told my patients less than a year ago when I was still practicing family medicine. I have since found out that the connection between cholesterol levels and heart disease is seriously being questioned by the scientific community.
-</p>
-
-<p>
-Even if there is a solid connection, saturated fat intake does not affect most people's cholesterol levels anyways. For those people that it does effect, higher saturated fat intake tends to raise both the “bad” cholesterol (LDL cholesterol) and the good cholesterol (HDL cholesterol). Further complicating things, people who eat less saturated fat tend to replace these calories with carbohydrates and vegetable oils that are high in omega-6 fatty acids. There is a lot of research indicating that these vegetable oils may contribute to a number of health problems including heart disease. Carbohydrates cause their own issues with the blood cholesterol panel, tending to raise triglycerides and make LDL cholesterol particles smaller, both of which are markers for heart disease risk. So, if your doctor is telling you to eat less saturated fat to lower your cholesterol or to take a statin drug, I would instead recommend that you try the paleo diet for 3-6 months and then re-test your cholesterol panel to see where you're at. Or perhaps you could just stop worrying about your cholesterol altogether and focus on things that you know are going to improve your health, like eating less processed foods, eating more nutrient-dense whole foods, being more active, getting more sleep and reducing the stress in your life.  
-</p>
-
 <h3>What cooking oils do you use?</h3>  
 <p>
 Ghee and expeller-pressed coconut oil are the main cooking oils I use. Ghee is clarified butter, which has had nearly all the milk proteins cooked off, so it is unlikely to be an issue for people with sensitivities to milk proteins. Both ghee and butter contain only trace amounts of lactose, making them generally well-tolerated by those who are lactose intollerant. Expeller-pressed coconut oil is steam deorderized, which removes the coconut taste making it suited to use in most recipes.  
@@ -81,11 +67,25 @@ Yes, I do. I make my chicken and beef stocks by slow booking bones. This is know
 
 <h3>Why do you label some of your meals “Low Carb”, “Low FODMAP” and “Autoimmune Protocol Approved”?</h3>
 
-<p>Low carb diets can help people lose weight, lower their insulin levels and lower their blood sugars, which is good for most people, including diabetics or people at risk of becoming diabetic. A low carb diet is often defined as getting 10­15% of your calories from carbohydrates. So, if I have labeled a meal “Low Carb” it contains under 20 grams of carbohydrates. This should keep most peole within their daily low carb diet limit. If you are of the male sex, taller, more muscular, or quite active, you may require more carbs than this, even on a low carb diet.</p>
+<p>Low carb diets can help people lose weight, lower their insulin levels and lower their blood sugars, which is good for most people, including diabetics or people at risk of becoming diabetic. A low carb diet is often defined as getting 10-15% of your calories from carbohydrates. So, if I have labeled a meal “Low Carb” it contains under 20 grams of carbohydrates. This should keep most peole within their daily low carb diet limit. If you are of the male sex, taller, more muscular, or quite active, you may require more carbs than this, even on a low carb diet.</p>
 
 <p>Low FODMAP diets are gaining more attention for helping people with irritable bowel symptoms (i.e. bloating, gas, diarrhea, constipation). So, if I have labeled a meal “Low FODMAP” it does not contain any of the foods higher in FODMAPs, or fermentable oligosaccharides, disaccharides, monosaccharides and polyols. These are bascially the sugars in wheat, rye, barley, milk, legumes and certain fruits and vegetables.</p>
 
 <p>The Autoimmune Paleo Protocol is a stricter version of the paleo diet, in which nightshade fruits and vegetables, eggs, nuts, and seeds are also avoided. This diet is often followed by people who have an autoimmune disease, such as rheumatoid arthritis or multiple sclerosis, and want to see if this stricter diet will improve their symptoms.  I am not cooking for enough people at this time to provide enough options to cater to each of these more restricted versions of the paleo diet, but I wanted to give people an idea of what else is out there that may be of benefit to them in the future.  </p>
+
+<h3>Isn't it unhealthy to eat saturated fat?</h3>
+
+<p>
+It's true that since the 1950s there has been a widespread public health campaign persuading people to eat less saturated fat to avoid heart disease. In fact, Canada's Food Guide still supports this message, but this recommendation was based on poorly done studies from many decades ago. Better designed studies have since been done and these do not support the hypothesis that saturated fat causes heart disease or strokes.
+</p>
+
+<p>
+However, many people's doctors still tell them that they have to eat less saturated fat to lower their cholesterol to avoid cardiovascular disease. This is even what I told my patients less than a year ago when I was still practicing family medicine. I have since found out that the connection between cholesterol levels and heart disease is seriously being questioned by the scientific community.
+</p>
+
+<p>
+Even if there is a solid connection, saturated fat intake does not affect most people's cholesterol levels anyways. For those people that it does effect, higher saturated fat intake tends to raise both the “bad” cholesterol (LDL cholesterol) and the good cholesterol (HDL cholesterol). Further complicating things, people who eat less saturated fat tend to replace these calories with carbohydrates and vegetable oils that are high in omega-6 fatty acids. There is a lot of research indicating that these vegetable oils may contribute to a number of health problems including heart disease. Carbohydrates cause their own issues with the blood cholesterol panel, tending to raise triglycerides and make LDL cholesterol particles smaller, both of which are markers for heart disease risk. So, if your doctor is telling you to eat less saturated fat to lower your cholesterol or to take a statin drug, I would instead recommend that you try the paleo diet for 3-6 months and then re-test your cholesterol panel to see where you're at. Or perhaps you could just stop worrying about your cholesterol altogether and focus on things that you know are going to improve your health, like eating less processed foods, eating more nutrient-dense whole foods, being more active, getting more sleep and reducing the stress in your life.  
+</p>
 
 <h3>Wouldn't it be better to eat a vegetarian diet?</h3>
 <p>
