--- a/views/about.html
+++ b/views/about.html
@@ -40,7 +40,7 @@ Deliveries will be made on Tuesday and Friday mornings between 9am and 12pm.  We
 <h2>The Paleo Diet</h2>
 
 <p>
-A paleo diet excludes all grains, dairy, legumes, refined sweeteners, high omega-6 vegetable oils and other processed foods.  Plenty of vegetables, fruit, meat, fish, seeds and nuts are eaten instead. This diet would be suitable for many elimination diets and my hope is that people will use this opportunity to help them explore their own food intolerances or simply to incorporate more nutrient­dense foods in their diet and see how it makes them feel. These meals will be lower in carbohydrates and higher in saturated fat than what many people are used to eating, but I believe this is actually a much healthier way to eat.</p>
+A paleo diet excludes all grains, dairy, legumes, refined sweeteners, high omega-6 vegetable oils and other processed foods.  Plenty of vegetables, fruit, meat, fish, seeds and nuts are eaten instead. This diet would be suitable for many elimination diets and my hope is that people will use this opportunity to help them explore their own food intolerances or simply to incorporate more nutrient-dense foods in their diet to see how it makes them feel. These meals will be lower in carbohydrates and higher in saturated fat than what many people are used to eating, but I believe this is actually a much healthier way to eat.</p>
 
 <p>For more info, check out this video by a respected health care practitioner in the paleo community encouraging people to try the paleo diet:</p>
 <script height="456px" width="100%" src="http://player.ooyala.com/iframe.js#pbid=35ad9a0b3b6943de990b03e6b239b4e2&ec=11MDQxbzr6WQImVwZWUzgcEpJ_ahafk9"></script>
@@ -49,12 +49,12 @@ A paleo diet excludes all grains, dairy, legumes, refined sweeteners, high omega
 
 <h3>What cooking oils do you use?</h3>  
 <p>
-Ghee and expeller-pressed coconut oil are the main cooking oils I use. Ghee is clarified butter, which has had nearly all the milk proteins cooked off, so it is unlikely to be an issue for people with sensitivities to milk proteins. Both ghee and butter contain only trace amounts of lactose, making them generally well-tolerated by those who are lactose intollerant. Expeller-pressed coconut oil is steam deorderized, which removes the coconut taste making it suited to use in most recipes.  
+Ghee and expeller-pressed coconut oil are the main cooking oils I use. Ghee is clarified butter, which has nearly all the milk proteins cooked off, so it is unlikely to be an issue for people with sensitivities to milk proteins. Both ghee and butter contain only trace amounts of lactose, so they are generally well-tolerated by those who are lactose intollerant. Expeller-pressed coconut oil is steam deorderized, which removes the coconut taste leaving it well suited to use in most recipes.  
 </p>
 
 <h3>What about the oils in your salad dressings?</h3>
 
-<p>Extra­virgin olive oil is the main oil I use for salad dressings. In addition, I use sesame oil to flavour Asian salad dressings. If mayonaise is used it's always homemade using avocado oil. I do not use high omega-6 vegetable oils, such as canola oil, sunflower/saflower oil, soybean oil or corn oil.  
+<p>Extra virgin olive oil is the main oil I use for salad dressings. I also use sesame oil to flavour Asian salad dressings. If mayonaise is used it's always homemade with avocado oil. I do not use high omega-6 vegetable oils, such as canola oil, sunflower/saflower oil, soybean oil or corn oil.  
 
 <h3>Do you make your own soup stock?</h3>
 <p>
@@ -63,13 +63,13 @@ Yes, I do. I make my chicken and beef stocks by slow booking bones. This is know
 
 <h3>What sweeteners do you use?</h3>
 
-<p>Sometimes I use fruit and juice fresh-squeezed from fruit to sweeten my meals a touch. I do not use any other sweeteners, such as sugar, honey, maple syrup or artificial sweeteners in any of my recipes.  </p>
+<p>Sometimes I use fruit and juice fresh-squeezed from fruit to sweeten my meals a touch. I do not use any other sweeteners, such as refined sugar, honey, maple syrup or artificial sweeteners in any of my recipes.  </p>
 
 <h3>Why do you label some of your meals “Low Carb”, “Low FODMAP” and “Autoimmune Protocol Approved”?</h3>
 
-<p>Low carb diets can help people lose weight, lower their insulin levels and lower their blood sugars, which is good for most people, including diabetics or people at risk of becoming diabetic. A low carb diet is often defined as getting 10-15% of your calories from carbohydrates. So, if I have labeled a meal “Low Carb” it contains under 20 grams of carbohydrates. This should keep most peole within their daily low carb diet limit. If you are of the male sex, taller, more muscular, or quite active, you may require more carbs than this, even on a low carb diet.</p>
+<p>Low carb diets can help people lose weight, lower their insulin levels and lower their blood sugars, which is good for most people, including diabetics or people at risk of becoming diabetic. A low carb diet is often defined as getting 10-15% of your calories from carbohydrates.  If I have labeled a meal “Low Carb” it contains under 20 grams of carbohydrates. This should keep most peole within their daily low carb diet limit. If you are of the male sex, taller, more muscular, or quite active, you may require more carbs than this, even on a low carb diet.</p>
 
-<p>Low FODMAP diets are gaining more attention for helping people with irritable bowel symptoms (i.e. bloating, gas, diarrhea, constipation). So, if I have labeled a meal “Low FODMAP” it does not contain any of the foods higher in FODMAPs, or fermentable oligosaccharides, disaccharides, monosaccharides and polyols. These are bascially the sugars in wheat, rye, barley, milk, legumes and certain fruits and vegetables.</p>
+<p>Low FODMAP diets are gaining more attention for helping people with irritable bowel symptoms (i.e. bloating, gas, diarrhea, constipation). So, if I have labeled a meal “Low FODMAP” it does not contain any of the foods higher in FODMAPs (fermentable oligosaccharides, disaccharides, monosaccharides and polyols). These are bascially the sugars in wheat, rye, barley, milk, legumes and certain fruits and vegetables.</p>
 
 <p>The Autoimmune Paleo Protocol is a stricter version of the paleo diet, in which nightshade fruits and vegetables, eggs, nuts, and seeds are also avoided. This diet is often followed by people who have an autoimmune disease, such as rheumatoid arthritis or multiple sclerosis, and want to see if this stricter diet will improve their symptoms.  I am not cooking for enough people at this time to provide enough options to cater to each of these more restricted versions of the paleo diet, but I wanted to give people an idea of what else is out there that may be of benefit to them in the future.  </p>
 
