--- a/public/css/index.less
+++ b/public/css/index.less
@@ -3,14 +3,14 @@
 @import "font-awesome.min.css";
 
 .jumbotron {
-  margin-top: 10px;
   background: url(/img/banner.jpg);
   background-size: 100% 100%;
-}
 
-.jumbotron div {
-  background: rgba(255, 255, 255, 0.9);
-  padding: 10px;
+  h1 { margin-top: 0 }
+  div {
+    background: rgba(255, 255, 255, 0.9);
+    padding: 10px;
+  }
 }
 
 .navbar-inverse, .navbar-inverse .navbar-link, .navbar-inverse .brand, .navbar-inverse a, .navbar-inverse .nav > li > a { color: #eee; }
