--- a/views/index.html
+++ b/views/index.html
@@ -83,36 +83,37 @@
             <div id="choose">
               <h2>Select a Payment Option</h2>
 
-              <button id="bitcoin" type="button" class="btn btn-default lead" style="width: 100%">$450 in Bitcoin</button>
+              <button id="bitcoin" type="button" class="btn btn-default lead" style="width: 100%">Bitcoin - $450</button>
               <br /><br />
               <button id="cash" type="button" class="btn btn-default" style="width: 100%">
-              <span class="lead" style="margin-bottom: -20px">$480 in Cash</span>
+              <span class="lead" style="margin-bottom: -20px">Cash - $480</span>
               <br />
               <small style="font-size: 18px">(payable upon first delivery or in weekly installments of $120)</small>
               </button>
             </div>
 
             <div id="pay_bitcoin" style="display: none">
-              <h2>Pay with Bitcoin</h2>
               <div id="request" class="text-center">
-                <pre id="address"></pre>
+                <h2></h2>
+                <h4 id="address"></h4>
                 <div id="qr" style="margin-left: 150px; margin-bottom: 15px;"></div>
-                <p>Need to get some Bitcoins?  Try <a href="http://circle.com/" target="_blank">circle.com</a>, they take VISA.</p>
+                <p>Need to get some Bitcoins?  Try <a href="http://circle.com/" target="_blank">circle.com</a>. They take VISA.</p>
               </div>
-              <button id="received" class="btn btn-success" style="display: none; width: 100%">Payment received!  You're registered!</button>
+              <button id="received" class="btn btn-success" style="display: none; width: 100%; margin-top: 15px;">Payment received!  You're registered!</button>
             </div>
 
             <div id="pay_cash" style="display: none">
-              <h2>Pay with Cash</h2>
-
-              <p>Ok, you're registered!  Please have cash ready for us on November 4th.  You can pay up front or in weekly installments of $120 every Tuesday.</p>
+              <div class="alert alert-success">
+                <h2>Registered!</h2>
+              </div>
+              <p>Please have cash ready for us on November 4th.  You can pay up front or in weekly installments of $120 every Tuesday.</p>
             </div>
           </div>
       </div>
       <div class="modal-footer">
         <button type="button" id="next" class="btn btn-primary">Next</button>
         <button type="button" id="cancel" class="btn btn-default" style="display: none">Cancel</button>
-        <button type="button" id="close" class="btn btn-primary" style="display: none" data-dismiss="modal">Close</button>
+        <button type="button" id="close" class="btn btn-primary" style="display: none" data-dismiss="modal">Got it!</button>
       </div>
     </div>
   </div>
