--- a/views/about.html
+++ b/views/about.html
@@ -58,7 +58,7 @@ Ghee and expeller-pressed coconut oil are the main cooking oils I use.  Ghee is 
 
 <h3>Do you make your own soup stock?</h3>
 <p>
-Yes, I do. I make my chicken and beef stocks by slow booking bones.  This is known as a bone broth.  I find this a good way to get extra calcium in my diet.  Bone broth is also rich in the amino acid glycine, which is often lacking from our diets that tend to be high in muscle meat.
+Yes, I do. I make my chicken and beef stocks by slow cooking bones.  This is known as a bone broth.  I find this a good way to get extra calcium in my diet.  Bone broth is also rich in the amino acid glycine, which is often lacking from our diets that tend to be high in muscle meat.
 </p>
 
 <h3>What sweeteners do you use?</h3>
