--- a/views/about.html
+++ b/views/about.html
@@ -97,3 +97,5 @@ I have been a vegan, a lacto-ovo vegetarian and a pescaterian at times in the pa
 
 <p>So, for now I continue to eat meat.  I know that there is not enough meat in the world to feed all humans the amount of meat I currently eat, but I also know that food scarcity and food waste is a bigger issue than I can solve with my own diet.  I feel healthiest by including meat in my diet and I am commited to raising some of my own meat and to supporting other local farmers who integrate raising livestock into the holistic management of their farms.
 </p>
+
+<h3>Please email me if you have any other questions</h3>
